[tool.poetry]
name = "sandbox--prompts"
version = "0.1.0"
description = ""
authors = ["Ryuichi Inagaki"]
readme = "README.md"
packages = [{include = "prompts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
seaborn = "^0.12.2"
jupyterlab = "^4.0.3"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
